--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,6 +21,29 @@ server {
     listen 443 ssl;
     server_name raven.lan;
 
+    # Use Docker's internal DNS resolver for runtime resolution
+    resolver 127.0.0.11 valid=30s;
+
+    # Progress tracker API endpoints
+    location /api/ {
+        # Use variable to force runtime DNS resolution - nginx won't fail at startup if service doesn't exist
+        set $progress_backend progress-tracker:5555;
+        proxy_pass http://$progress_backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # CORS headers for frontend access
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Content-Type' always;
+
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
+    }
+
     location / {
         root /usr/share/nginx/html;
         index index.html;
@@ -61,12 +84,54 @@ server {
     client_header_timeout 3600s;      # Allow 1 hour for headers
     proxy_request_buffering off;      # Don't buffer - stream directly
 
-    # Increase max body size for file uploads (up to 2GB)
-    client_max_body_size 2000M;
+    # Increase max body size for file uploads (up to 10GB)
+    client_max_body_size 10240M;
+
+    # Use Docker's internal DNS resolver for runtime resolution
+    resolver 127.0.0.11 valid=30s;
+
+    # CORS configuration for webhooks
+    location /webhook/ {
+        # Hide CORS headers from backend to prevent duplicates
+        proxy_hide_header 'Access-Control-Allow-Origin';
+        proxy_hide_header 'Access-Control-Allow-Methods';
+        proxy_hide_header 'Access-Control-Allow-Headers';
+        proxy_hide_header 'Access-Control-Max-Age';
+
+        # Handle preflight OPTIONS requests
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' 'https://raven.lan' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Accept' always;
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+
+        # Add CORS headers to all webhook responses
+        add_header 'Access-Control-Allow-Origin' 'https://raven.lan' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Content-Type, Accept' always;
+
+        # Use variable to force runtime DNS resolution - nginx won't fail at startup if service doesn't exist
+        set $n8n_backend n8n:5678;
+        proxy_pass http://$n8n_backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # WebSocket support
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+    }
 
     location / {
-        # Use a fixed IP address instead of hostname resolution
-        proxy_pass http://n8n:5678;
+        # Use variable to force runtime DNS resolution - nginx won't fail at startup if service doesn't exist
+        set $n8n_backend n8n:5678;
+        proxy_pass http://$n8n_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -101,9 +166,13 @@ server {
     proxy_read_timeout 600;
     send_timeout 600;
 
+    # Use Docker's internal DNS resolver for runtime resolution
+    resolver 127.0.0.11 valid=30s;
+
     location / {
-        # Direct proxy pass instead of variable
-        proxy_pass http://open-webui:8080;
+        # Use variable to force runtime DNS resolution - nginx won't fail at startup if service doesn't exist
+        set $openwebui_backend open-webui:8080;
+        proxy_pass http://$openwebui_backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -127,14 +196,18 @@ server {
     listen 443 ssl;
     server_name kokoro.lan;
 
+    # Use Docker's internal DNS resolver for runtime resolution
+    resolver 127.0.0.11 valid=30s;
+
     # Redirect root to web interface
     location = / {
         return 301 /web/;
     }
 
     location / {
-        # Direct proxy pass instead of variable
-        proxy_pass http://localai-kokoro-fastapi-gpu-1:8880;
+        # Use variable to force runtime DNS resolution - nginx won't fail at startup if service doesn't exist
+        set $kokoro_backend localai-kokoro-fastapi-gpu-1:8880;
+        proxy_pass http://$kokoro_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -150,10 +223,10 @@ server {
 }
 
 
-# Ollama
+# LM Studio
 server {
     listen 443 ssl;
-    server_name ollama.lan;
+    server_name lmstudio.lan;
 
     # Longer timeouts for model operations
     proxy_connect_timeout 600;
@@ -162,7 +235,7 @@ server {
     send_timeout 600;
 
     location / {
-        proxy_pass http://localhost:11434;
+        proxy_pass http://localhost:1234;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
@@ -176,7 +249,7 @@ server {
     }
 
     location /maintenance.html {
-        return 200 "The Ollama service is starting up. Please refresh in a moment.";
+        return 200 "The LM Studio service is starting up. Please refresh in a moment.";
         add_header Content-Type text/plain;
     }
 }
@@ -186,9 +259,13 @@ server {
     listen 443 ssl;
     server_name studio.lan;
 
+    # Use Docker's internal DNS resolver for runtime resolution
+    resolver 127.0.0.11 valid=30s;
+
     location / {
-        # Use supabase-studio instead of db
-        proxy_pass http://supabase-studio:3000;
+        # Use variable to force runtime DNS resolution - nginx won't fail at startup if service doesn't exist
+        set $supabase_backend supabase-studio:3000;
+        proxy_pass http://$supabase_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -214,9 +291,13 @@ server {
     proxy_read_timeout 600;
     send_timeout 600;
 
+    # Use Docker's internal DNS resolver for runtime resolution
+    resolver 127.0.0.11 valid=30s;
+
     location / {
-        # Proxy to the Supabase Kong gateway
-        proxy_pass http://kong:8000; # Assuming standard Supabase docker setup
+        # Use variable to force runtime DNS resolution - nginx won't fail at startup if service doesn't exist
+        set $kong_backend kong:8000;
+        proxy_pass http://$kong_backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade"; # For potential WebSockets
@@ -241,8 +322,13 @@ server {
     listen 443 ssl;
     server_name nocodb.lan;
 
+    # Use Docker's internal DNS resolver for runtime resolution
+    resolver 127.0.0.11 valid=30s;
+
     location / {
-        proxy_pass http://nocodb:8080;
+        # Use variable to force runtime DNS resolution - nginx won't fail at startup if service doesn't exist
+        set $nocodb_backend nocodb:8080;
+        proxy_pass http://$nocodb_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -268,8 +354,13 @@ server {
     proxy_read_timeout 600;
     send_timeout 600;
 
+    # Use Docker's internal DNS resolver for runtime resolution
+    resolver 127.0.0.11 valid=30s;
+
     location / {
-        proxy_pass http://comfyui:8188;
+        # Use variable to force runtime DNS resolution - nginx won't fail at startup if service doesn't exist
+        set $comfyui_backend comfyui:8188;
+        proxy_pass http://$comfyui_backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -300,8 +391,13 @@ server {
     proxy_read_timeout 600;
     send_timeout 600;
 
+    # Use Docker's internal DNS resolver for runtime resolution
+    resolver 127.0.0.11 valid=30s;
+
     location / {
-        proxy_pass http://crawl4ai:8000;
+        # Use variable to force runtime DNS resolution - nginx won't fail at startup if service doesn't exist
+        set $crawl4ai_backend crawl4ai:8000;
+        proxy_pass http://$crawl4ai_backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade"; # For potential WebSockets
@@ -334,8 +430,13 @@ server {
     # Increase max body size for large video/audio file uploads (up to 2GB)
     client_max_body_size 2048M;
 
+    # Use Docker's internal DNS resolver for runtime resolution
+    resolver 127.0.0.11 valid=30s;
+
     location / {
-        proxy_pass http://whisperx:8000;
+        # Use variable to force runtime DNS resolution - nginx won't fail at startup if service doesn't exist
+        set $whisperx_backend whisperx:8000;
+        proxy_pass http://$whisperx_backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -365,8 +466,13 @@ server {
     proxy_read_timeout 600;
     send_timeout 600;
 
+    # Use Docker's internal DNS resolver for runtime resolution
+    resolver 127.0.0.11 valid=30s;
+
     location / {
-        proxy_pass http://host.docker.internal:7860;
+        # Use variable to force runtime DNS resolution - nginx won't fail at startup if service doesn't exist
+        set $wan_backend host.docker.internal:7860;
+        proxy_pass http://$wan_backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -385,22 +491,41 @@ server {
     }
 }
 
-# InfiniteTalk
+# Virtual Assistant - NVIDIA powered visual assistant
 server {
     listen 443 ssl;
-    server_name infinitetalk.lan;
+    server_name va.lan;
 
-    # Very long timeouts for video generation
-    proxy_connect_timeout 3600;
-    proxy_send_timeout 3600;
-    proxy_read_timeout 3600;
-    send_timeout 3600;
+    # Longer timeouts for AI processing
+    proxy_connect_timeout 600;
+    proxy_send_timeout 600;
+    proxy_read_timeout 600;
+    send_timeout 600;
 
-    # Increase max body size for large video/audio file uploads (up to 2GB)
-    client_max_body_size 2048M;
+    # Use Docker's internal DNS resolver for runtime resolution
+    resolver 127.0.0.11 valid=30s;
+
+    # WebSocket support for real-time video/audio streaming
+    location /ws {
+        # Use variable to force runtime DNS resolution - nginx won't fail at startup if service doesn't exist
+        set $va_backend virtual-assistant:8080;
+        proxy_pass http://$va_backend;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_buffering off;
+        proxy_read_timeout 3600s;
+        proxy_send_timeout 3600s;
+    }
 
     location / {
-        proxy_pass http://infinitetalk:8418;
+        # Use variable to force runtime DNS resolution - nginx won't fail at startup if service doesn't exist
+        set $va_backend virtual-assistant:8080;
+        proxy_pass http://$va_backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -414,7 +539,41 @@ server {
     }
 
     location /maintenance.html {
-        return 200 "The InfiniteTalk service is starting up. Please refresh in a moment.";
+        return 200 "The Virtual Assistant service is starting up. Please refresh in a moment.";
         add_header Content-Type text/plain;
     }
 }
+
+# InfiniteTalk - Disabled
+# server {
+#     listen 443 ssl;
+#     server_name infinitetalk.lan;
+# 
+#     # Very long timeouts for video generation
+#     proxy_connect_timeout 3600;
+#     proxy_send_timeout 3600;
+#     proxy_read_timeout 3600;
+#     send_timeout 3600;
+# 
+#     # Increase max body size for large video/audio file uploads (up to 2GB)
+#     client_max_body_size 2048M;
+# 
+#     location / {
+#         proxy_pass http://infinitetalk:8418;
+#         proxy_http_version 1.1;
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection "upgrade";
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_buffering off;
+#         proxy_intercept_errors on;
+#         error_page 502 =200 /maintenance.html;
+#     }
+# 
+#     location /maintenance.html {
+#         return 200 "The InfiniteTalk service is starting up. Please refresh in a moment.";
+#         add_header Content-Type text/plain;
+#     }
+# }
