--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -508,7 +508,7 @@ server {
     # WebSocket support for real-time video/audio streaming
     location /ws {
         # Use variable to force runtime DNS resolution - nginx won't fail at startup if service doesn't exist
-        set $va_backend virtual-assistant:8080;
+        set $va_backend virtual-assistant-web:8080;
         proxy_pass http://$va_backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -524,7 +524,7 @@ server {
 
     location / {
         # Use variable to force runtime DNS resolution - nginx won't fail at startup if service doesn't exist
-        set $va_backend virtual-assistant:8080;
+        set $va_backend virtual-assistant-web:8080;
         proxy_pass http://$va_backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
