--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,6 +44,24 @@ server {
         }
     }
 
+    # Serve video transcription files for downloads
+    location /videos-to-process/ {
+        alias /data/videos-to-process/;
+        autoindex off;
+
+        # Set proper content-disposition for downloads
+        add_header Content-Disposition 'attachment';
+
+        # Allow large files
+        sendfile on;
+        tcp_nopush on;
+        tcp_nodelay on;
+
+        # Cache control
+        expires 1h;
+        add_header Cache-Control "public, immutable";
+    }
+
     location / {
         root /usr/share/nginx/html;
         index index.html;
