--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,6 +44,41 @@ server {
         }
     }
 
+    # Proxy n8n webhooks through raven.lan to avoid additional SSL cert prompts
+    location /webhook/ {
+        # Use variable to force runtime DNS resolution - nginx won't fail at startup if service doesn't exist
+        set $n8n_backend n8n:5678;
+        proxy_pass http://$n8n_backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Increased timeouts for n8n webhooks
+        proxy_connect_timeout 600;
+        proxy_send_timeout 600;
+        proxy_read_timeout 600;
+        send_timeout 600;
+
+        # Large file upload support
+        client_body_timeout 3600s;
+        client_header_timeout 3600s;
+        proxy_request_buffering off;
+        client_max_body_size 10240M;
+
+        # CORS headers
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Content-Type, Accept' always;
+
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+    }
+
     # Serve video transcription files for downloads
     location /videos-to-process/ {
         alias /data/videos-to-process/;
